Bug 448913 - "Paste x files" action in a file context menu should not be there
Summary: "Paste x files" action in a file context menu should not be there
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.23.5
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-21 17:33 UTC by tomashnyk
Modified: 2022-02-16 06:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.2
Sentry Crash Report:


Attachments
Paste One Item should not be in this context menu. (91.64 KB, image/png)
2022-01-21 17:33 UTC, tomashnyk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tomashnyk 2022-01-21 17:33:31 UTC
Created attachment 145723 [details]
Paste One Item should not be in this context menu.

Splitted from here: https://bugs.kde.org/show_bug.cgi?id=448799

When right-clicking a file in Dolphin, there is no action called "Paste one file/Paste x Items" under the first separator.

In Folder view, there is. I Would expect that this option should only be available in Folder view when rightclicking on the desktop, not on a file or a folder.
Comment 1 Bug Janitor Service 2022-01-21 22:15:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/815
Comment 2 Nate Graham 2022-02-16 06:04:48 UTC
Git commit 7d0c7ff8054260ceb925d0a9fc30f03c3c163b88 by Nate Graham.
Committed on 16/02/2022 at 06:04.
Pushed by ngraham into branch 'master'.

foldermodel: hide paste action when right-clicking on files

It doesn't make sense to offer a paste action when right-clicking on a
file as it implies that the paste will overwrite the file, or at least
interact with it in some way, but this is false.

Dolphin follows this logic and doesn't offer a paste action when
right-clicking on files, but Folder View does not, and it should.
This commit makes the Paste action not appear if the thing that was
right-clicked on is a file, rather than a folder or the wallpaper.
FIXED-IN: 5.24

M  +4    -2    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/7d0c7ff8054260ceb925d0a9fc30f03c3c163b88
Comment 3 Nate Graham 2022-02-16 06:05:14 UTC
Git commit 542e9a249d1839750ee67695742a8cb7c38edcca by Nate Graham.
Committed on 16/02/2022 at 06:05.
Pushed by ngraham into branch 'Plasma/5.24'.

foldermodel: hide paste action when right-clicking on files

It doesn't make sense to offer a paste action when right-clicking on a
file as it implies that the paste will overwrite the file, or at least
interact with it in some way, but this is false.

Dolphin follows this logic and doesn't offer a paste action when
right-clicking on files, but Folder View does not, and it should.
This commit makes the Paste action not appear if the thing that was
right-clicked on is a file, rather than a folder or the wallpaper.
FIXED-IN: 5.24


(cherry picked from commit 7d0c7ff8054260ceb925d0a9fc30f03c3c163b88)

M  +4    -2    containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/542e9a249d1839750ee67695742a8cb7c38edcca